force-app/main/default/objects/EventClassification__c/EventClassification__c.object-meta.xml
<CustomObject>
    <label>Event Classification</label>
    <nameField>
        <label>Event Classification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Classifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>