force-app/main/default/objects/EventClassification__c/fields/AlternateAbbreviationENUS__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviationENUS__c</fullName>
    <description>Abbreviation in English.</description>
    <inlineHelpText>Abbreviation in English.</inlineHelpText>
    <label>Alternate Abbreviation ENUS</label>
    <length>24</length>
    <type>Text</type>
</CustomField>