force-app/main/default/objects/EventClassification__c/fields/AlternateAbbreviationFR__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviationFR__c</fullName>
    <description>Abbreviation in French.</description>
    <inlineHelpText>Abbreviation in French.</inlineHelpText>
    <label>Alternate Abbreviation FR</label>
    <length>24</length>
    <type>Text</type>
</CustomField>