force-app/main/default/objects/EventClassification__c/fields/AlternateAbbreviationHU__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviationHU__c</fullName>
    <description>Abbreviation in Hungarian.</description>
    <inlineHelpText>Abbreviation in Hungarian.</inlineHelpText>
    <label>Alternate Abbreviation HU</label>
    <length>24</length>
    <type>Text</type>
</CustomField>