force-app/main/default/objects/EventClassification__c/fields/AlternateAbbreviationNLNL__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviationNLNL__c</fullName>
    <description>Abbreviation in Dutch.</description>
    <inlineHelpText>Abbreviation in Dutch.</inlineHelpText>
    <label>Alternate Abbreviation NLNL</label>
    <length>24</length>
    <type>Text</type>
</CustomField>