force-app/main/default/objects/EventClassification__c/fields/AlternateAbbreviationTR__c.field-meta.xml
<CustomField>
    <fullName>AlternateAbbreviationTR__c</fullName>
    <description>Abbreviation in Turkish.</description>
    <inlineHelpText>Abbreviation in Turkish.</inlineHelpText>
    <label>Alternate Abbreviation TR</label>
    <length>24</length>
    <type>Text</type>
</CustomField>