force-app/main/default/objects/EventClassification__c/fields/AlternateDescription__c.field-meta.xml
<CustomField>
    <fullName>AlternateDescription__c</fullName>
    <description>Description in alternate language.</description>
    <inlineHelpText>Description in alternate language.</inlineHelpText>
    <label>Alternate Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>