force-app/main/default/objects/EventClassification__c/fields/AlternateDescriptionDE__c.field-meta.xml
<CustomField>
    <fullName>AlternateDescriptionDE__c</fullName>
    <description>Description in German.</description>
    <inlineHelpText>Description in German.</inlineHelpText>
    <label>Alternate Description DE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>