force-app/main/default/objects/EventClassification__c/fields/AlternateDescriptionEL__c.field-meta.xml
<CustomField>
    <fullName>AlternateDescriptionEL__c</fullName>
    <description>Description in Greek.</description>
    <inlineHelpText>Description in Greek.</inlineHelpText>
    <label>Alternate Description EL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>