force-app/main/default/objects/EventClassification__c/fields/AlternateDescriptionENUS__c.field-meta.xml
<CustomField>
    <fullName>AlternateDescriptionENUS__c</fullName>
    <description>Description in English.</description>
    <inlineHelpText>Description in English.</inlineHelpText>
    <label>Alternate Description ENUS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>