force-app/main/default/objects/EventClassification__c/fields/AlternateDescriptionES__c.field-meta.xml
<CustomField>
    <fullName>AlternateDescriptionES__c</fullName>
    <description>Description in Spanish.</description>
    <inlineHelpText>Description in Spanish.</inlineHelpText>
    <label>Alternate Description ES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>