force-app/main/default/objects/EventClassification__c/fields/AlternateDescriptionFR__c.field-meta.xml
<CustomField>
    <fullName>AlternateDescriptionFR__c</fullName>
    <description>Description in French.</description>
    <inlineHelpText>Description in French.</inlineHelpText>
    <label>Alternate Description FR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>