force-app/main/default/objects/EventClassification__c/fields/AlternateDescriptionHU__c.field-meta.xml
<CustomField>
    <fullName>AlternateDescriptionHU__c</fullName>
    <description>Description in Hungarian.</description>
    <inlineHelpText>Description in Hungarian.</inlineHelpText>
    <label>Alternate Description HU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>