force-app/main/default/objects/EventClassification__c/fields/AlternateDescriptionIT__c.field-meta.xml
<CustomField>
    <fullName>AlternateDescriptionIT__c</fullName>
    <description>Description in Italian.</description>
    <inlineHelpText>Description in Italian.</inlineHelpText>
    <label>Alternate Description IT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>