force-app/main/default/objects/EventClassification__c/fields/AlternateDescriptionJA__c.field-meta.xml
<CustomField>
    <fullName>AlternateDescriptionJA__c</fullName>
    <description>Description in Japanese.</description>
    <inlineHelpText>Description in Japanese.</inlineHelpText>
    <label>Alternate Description JA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>