force-app/main/default/objects/EventClassification__c/fields/AlternateDescriptionNLNL__c.field-meta.xml
<CustomField>
    <fullName>AlternateDescriptionNLNL__c</fullName>
    <description>Description in Dutch.</description>
    <inlineHelpText>Description in Dutch.</inlineHelpText>
    <label>Alternate Description NLNL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>