force-app/main/default/objects/EventClassification__c/fields/AlternateDescriptionPL__c.field-meta.xml
<CustomField>
    <fullName>AlternateDescriptionPL__c</fullName>
    <description>Description in Polish.</description>
    <inlineHelpText>Description in Polish.</inlineHelpText>
    <label>Alternate Description PL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>