force-app/main/default/objects/EventClassification__c/fields/AlternateDescriptionPTBR__c.field-meta.xml
<CustomField>
    <fullName>AlternateDescriptionPTBR__c</fullName>
    <description>Description in Portuguese (Brazil).</description>
    <inlineHelpText>Description in Portuguese (Brazil).</inlineHelpText>
    <label>Alternate Description PTBR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>