force-app/main/default/objects/EventClassification__c/fields/AlternateDescriptionPTPT__c.field-meta.xml
<CustomField>
    <fullName>AlternateDescriptionPTPT__c</fullName>
    <description>Description in Portuguese (Portugal).</description>
    <inlineHelpText>Description in Portuguese (Portugal).</inlineHelpText>
    <label>Alternate Description PTPT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>