force-app/main/default/objects/EventClassification__c/fields/AlternateDescriptionRU__c.field-meta.xml
<CustomField>
    <fullName>AlternateDescriptionRU__c</fullName>
    <description>Description in Russian.</description>
    <inlineHelpText>Description in Russian.</inlineHelpText>
    <label>Alternate Description RU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>