force-app/main/default/objects/EventClassification__c/fields/AlternateDescriptionTR__c.field-meta.xml
<CustomField>
    <fullName>AlternateDescriptionTR__c</fullName>
    <description>Description in Turkish.</description>
    <inlineHelpText>Description in Turkish.</inlineHelpText>
    <label>Alternate Description TR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>