force-app/main/default/objects/EventClassification__c/fields/AlternateDescriptionZHCN__c.field-meta.xml
<CustomField>
    <fullName>AlternateDescriptionZHCN__c</fullName>
    <description>Description in Chinese (Simplified).</description>
    <inlineHelpText>Description in Chinese (Simplified).</inlineHelpText>
    <label>Alternate Description ZHCN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>