force-app/main/default/objects/EventClassification__c/fields/AlternateDescriptionZHTW__c.field-meta.xml
<CustomField>
    <fullName>AlternateDescriptionZHTW__c</fullName>
    <description>Description in Chinese (Traditional).</description>
    <inlineHelpText>Description in Chinese (Traditional).</inlineHelpText>
    <label>Alternate Description ZHTW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>