force-app/main/default/objects/EventClassification__c/fields/AlternateNameEL__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameEL__c</fullName>
    <description>Name in Greek.</description>
    <inlineHelpText>Name in Greek.</inlineHelpText>
    <label>Alternate Name EL</label>
    <length>80</length>
    <type>Text</type>
</CustomField>