force-app/main/default/objects/EventClassification__c/fields/AlternateNameES__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameES__c</fullName>
    <description>Name in Spanish.</description>
    <inlineHelpText>Name in Spanish.</inlineHelpText>
    <label>Alternate Name ES</label>
    <length>80</length>
    <type>Text</type>
</CustomField>