force-app/main/default/objects/EventClassification__c/fields/AlternateNameIT__c.field-meta.xml
<CustomField>
    <fullName>AlternateNameIT__c</fullName>
    <description>Name in Italian.</description>
    <inlineHelpText>Name in Italian.</inlineHelpText>
    <label>Alternate Name IT</label>
    <length>80</length>
    <type>Text</type>
</CustomField>