force-app/main/default/objects/EventClassification__c/fields/DefaultAverageCheck10__c.field-meta.xml
<CustomField>
    <fullName>DefaultAverageCheck10__c</fullName>
    <description>The default for BookingEvent.ForecastAverageCheck10 when using this EventClassification.</description>
    <inlineHelpText>The default for BookingEvent.ForecastAverageCheck10 when using this EventClassification.</inlineHelpText>
    <label>Default Average Check10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>