force-app/main/default/objects/EventClassification__c/fields/DefaultAverageCheck11__c.field-meta.xml
<CustomField>
    <fullName>DefaultAverageCheck11__c</fullName>
    <description>The default for BookingEvent.ForecastAverageCheck11 when using this EventClassification.</description>
    <inlineHelpText>The default for BookingEvent.ForecastAverageCheck11 when using this EventClassification.</inlineHelpText>
    <label>Default Average Check11</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>