force-app/main/default/objects/EventClassification__c/fields/DefaultAverageCheck12__c.field-meta.xml
<CustomField>
    <fullName>DefaultAverageCheck12__c</fullName>
    <description>The default for BookingEvent.ForecastAverageCheck12 when using this EventClassification.</description>
    <inlineHelpText>The default for BookingEvent.ForecastAverageCheck12 when using this EventClassification.</inlineHelpText>
    <label>Default Average Check12</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>