force-app/main/default/objects/EventClassification__c/fields/DefaultAverageCheckFactor10__c.field-meta.xml
<CustomField>
    <fullName>DefaultAverageCheckFactor10__c</fullName>
    <description>The default for BookingEvent.ForecastAverageCheckFactor10 when using this EventClassification.</description>
    <inlineHelpText>The default for BookingEvent.ForecastAverageCheckFactor10 when using this EventClassification.</inlineHelpText>
    <label>Default Average Check Factor10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>