force-app/main/default/objects/EventClassification__c/fields/DefaultIsPosted__c.field-meta.xml
<CustomField>
    <fullName>DefaultIsPosted__c</fullName>
    <description>The default for BookingEvent.IsPosted when using this EventClassification.</description>
    <inlineHelpText>The default for BookingEvent.IsPosted when using this EventClassification.</inlineHelpText>
    <label>Default Is Posted</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>