force-app/main/default/objects/EventClassification__c/fields/DefaultSetup__c.field-meta.xml
<CustomField>
    <fullName>DefaultSetup__c</fullName>
    <description>The default FunctionRoomSetup setup value for BookingEvents using this EventClassification.</description>
    <inlineHelpText>The default FunctionRoomSetup setup value for BookingEvents using this EventClassification.</inlineHelpText>
    <label>Default Setup</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>SetupValue__c</referenceTo>
    <relationshipLabel>Related Records</relationshipLabel>
    <relationshipName>DefaultSetup</relationshipName>
    <type>Lookup</type>
</CustomField>