force-app/main/default/objects/EventClassification__c/fields/DefaultStartTime24Hour__c.field-meta.xml
<CustomField>
    <fullName>DefaultStartTime24Hour__c</fullName>
    <description>Default start time for the event in 24-hour format. Example: \</description>
    <inlineHelpText>Default start time for the event in 24-hour format. Example: \</inlineHelpText>
    <label>Default Start Time24Hour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>