force-app/main/default/objects/EventClassification__c/fields/DefaultTaxGroup__c.field-meta.xml
<CustomField>
    <fullName>DefaultTaxGroup__c</fullName>
    <description>The default TaxGroup for events created with this classification.</description>
    <inlineHelpText>The default TaxGroup for events created with this classification.</inlineHelpText>
    <label>Default Tax Group</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>TaxGroup__c</referenceTo>
    <relationshipLabel>Related Records</relationshipLabel>
    <relationshipName>DefaultTaxGroup</relationshipName>
    <type>Lookup</type>
</CustomField>