force-app/main/default/objects/EventClassification__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <description>System Field: Do Not Use. The ID of the record in the source system. Required when SourceSystemExternalId is not null. Must be unique within the same source system but not across all records in Salesforce.</description>
    <inlineHelpText>System Field: Do Not Use. The ID of the record in the source system. Required when SourceSystemExternalId is not null. Must be unique within the same source system but not across all records in Salesforce.</inlineHelpText>
    <label>External Id</label>
    <length>174</length>
    <type>Text</type>
</CustomField>