force-app/main/default/objects/EventClassification__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>See description on SetupValue.Location.</description>
    <inlineHelpText>See description on SetupValue.Location.</inlineHelpText>
    <label>Location</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Related Records</relationshipLabel>
    <relationshipName>EventClassificationLocation</relationshipName>
    <type>Lookup</type>
</CustomField>