force-app/main/default/objects/EventClassification__c/fields/NIHRMMigrations_ExternalID__c.field-meta.xml
<CustomField>
    <fullName>NIHRMMigrations_ExternalID__c</fullName>
    <description>System Field: Do Not Use.</description>
    <inlineHelpText>System Field: Do Not Use.</inlineHelpText>
    <label>NIHRMMigrations External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>