force-app/main/default/objects/EventClassification__c/fields/PlannerPortalClassification__c.field-meta.xml
<CustomField>
    <fullName>PlannerPortalClassification__c</fullName>
    <description>System Field: Do Not Use. Categories the event classification for use in the Meeting Planner Portal.</description>
    <inlineHelpText>System Field: Do Not Use. Categories the event classification for use in the Meeting Planner Portal.</inlineHelpText>
    <label>Planner Portal Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Value1</fullName>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>