force-app/main/default/objects/EventClassification__c/fields/PmsCode__c.field-meta.xml
<CustomField>
    <fullName>PmsCode__c</fullName>
    <description>System Field: Do Not Use. Unique identifier for a particular Event Classification record that determines how this value should be sent to the PMS</description>
    <inlineHelpText>System Field: Do Not Use. Unique identifier for a particular Event Classification record that determines how this value should be sent to the PMS</inlineHelpText>
    <label>Pms Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>